# hash-algorithms

./: .gitignore  CMakeLists.txt  README.md  crc.cpp  crc.h  hexdump.h  init.h  main.cpp  timer.h
crc/: crc.h  init.h
crc/info/: crc32_info.h  crc_info.h
info/: crc32_info.h  crc64_info.h  crc_info.h
utils/: hexdump.h  timer.h
